# tassers-quackhacks-2026-submission

./: .gitignore  README.md  collect_fingerspelling_data.py  collect_single_letter_data.py  desktop.ini  elevenlabs-test.py  elevenlabs_tts.py  game_server.py  index.html  letter-stream-game-frontend.html  letter-stream-game.html  letter_stream_game_app.py  letter_stream_game_server.py  natural-language.py  nn_requirements.txt  package.json  pyproject.toml  requirements.txt  scraper_requirements.txt  script.js  script.ps1  styles.css  translate.py  video_scraper.py  videos.db
aaryan-letter-data/data/: labels.csv
data/: labels.csv
data/landmarks/: clip_000002.csv  clip_000042.csv  clip_000047.csv  clip_000050.csv  clip_000054.csv  clip_000056.csv  clip_000059.csv  clip_000060.csv  clip_000061.csv  clip_000067.csv  clip_000070.csv  clip_000071.csv  clip_000073.csv  clip_000075.csv  clip_000085.csv  clip_000087.csv  clip_000089.csv  clip_000100.csv  clip_000103.csv  clip_000107.csv  (+7 more)
extra-words-classifier/: README.md  data.py  live_predict.py  model.py  predict.py  train.py
letter-window-classifier/: README.md  data.py  export_onnx.py  live_predict.py  model.py  predict.py  train.py
letter-window-classifier-old/: data.py
models-old/: asl_left_hand_letter_window_transformer_sequences.onnx
neural-network/: neural-network.py  predict_from_csv.py  stream_predict_from_csv.py  train_ctc.py
scripts/: scraper.py  video_creator.js
src/: record_training_data.py  record_webcam.py  visualize_landmark_csv.py
training/: shuffle_generator.py
words-data/: labels.csv
(+428 files in other folders)
